# shrug

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  release-notes.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  default-config.toml  main.rs  text_clipboard.rs  window_main.glade  window_main.ui
tools/: check.sh
