[package]
name = "shrug"
description = "Easy access to your favourite strings"
version = "0.1.4-pre"
authors = ["Diogo Sousa <diogogsousa@gmail.com>"]

edition = "2021"
rust-version = "1.71.0"

homepage = "https://github.com/orium/shrug"
repository = "https://github.com/orium/shrug"
documentation = "https://docs.rs/shrug"
readme = "README.md"

keywords = [
    "shortcut",
    "strings",
    "clipboard",
]

categories = [
    "gui",
]

license = "MPL-2.0"

# What to include when packaging.
include = [
    "/src/**/*.rs",
    "/src/**/*.toml",
    "/src/**/*.ui",
    "/Cargo.toml",
    "/LICENSE.md",
    "/README.md",
    "/release-notes.md",
]

[badges]
codecov = { repository = "orium/shrug", branch = "main", service = "github" }

[dependencies]
gtk4 = { version = "0.8.2", features = ["v4_6"] }
gdk4 = { version = "0.8.2", features = ["v4_6"] }
gio = { version = "0.19.5", features = ["v2_70"] }
glib = "0.19.6"
toml = "0.8.13"
dirs = "5.0.1"
serde = "1.0.202"
serde_derive = "1.0.202"
sublime_fuzzy = "0.7.0"
rayon = "1.10.0"
async-channel = "2.3.1"

[features]
fatal-warnings = []

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = "deny"

match-bool = "allow"
needless-for-each = "allow"
similar-names = "allow"
