[package]
name = "shrug"
description = "Easy access to your favourite strings"
version = "0.1.4-pre"
authors = ["Diogo Sousa <diogogsousa@gmail.com>"]

edition = "2021"
rust-version = "1.71.0"

homepage = "https://github.com/orium/shrug"
repository = "https://github.com/orium/shrug"
documentation = "https://docs.rs/shrug"
readme = "README.md"

keywords = ["shortcut", "strings", "clipboard"]

categories = ["gui"]

license = "MPL-2.0"

# What to include when packaging.
include = [
    "/src/**/*.rs",
    "/src/**/*.toml",
    "/src/**/*.ui",
    "/Cargo.toml",
    "/LICENSE.md",
    "/README.md",
    "/release-notes.md",
]

[badges]
codecov = { repository = "orium/shrug", branch = "main", service = "github" }

[dependencies]
async-channel = "2.3.1"
dirs = "6.0.0"
gdk4 = { version = "0.9.6", features = ["v4_6"] }
gio = { version = "0.20.9", features = ["v2_70"] }
glib = "0.20.9"
gtk4 = { version = "0.9.6", features = ["v4_6"] }
rayon = "1.10.0"
serde = "1.0.218"
serde_derive = "1.0.218"
sublime_fuzzy = "0.7.0"
toml = "0.8.20"

[features]
fatal-warnings = []

[package.metadata.cargo-machete]
ignored = ["serde"]

[lints.clippy]
all = { level = "warn", priority = -2 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -2 }

match-bool = "allow"
needless-for-each = "allow"
similar-names = "allow"
too-many-lines = "allow"
