[package]
name = "shrug"
description = "Easy access to your favourite strings"
version = "0.1.5-pre"
authors = ["Diogo Sousa <diogogsousa@gmail.com>"]

edition = "2024"
rust-version = "1.85.0"

homepage = "https://github.com/orium/shrug"
repository = "https://github.com/orium/shrug"
documentation = "https://docs.rs/shrug"
readme = "README.md"

keywords = ["shortcut", "strings", "clipboard"]

categories = ["gui"]

license = "MIT"

# What to include when packaging.
include = [
    "/src/**/*.rs",
    "/src/**/*.toml",
    "/src/**/*.ui",
    "/Cargo.toml",
    "/LICENSE.md",
    "/README.md",
    "/release-notes.md",
]

[badges]
codecov = { repository = "orium/shrug", branch = "main", service = "github" }

[dependencies]
async-channel = "2.5.0"
dirs = "6.0.0"
gdk4 = { version = "0.10.1", features = ["v4_6"] }
gio = { version = "0.21.2", features = ["v2_70"] }
glib = "0.21.3"
gtk4 = { version = "0.10.1", features = ["v4_6"] }
rayon = "1.11.0"
serde = "1.0.228"
serde_derive = "1.0.228"
sublime_fuzzy = "0.7.0"
toml = "0.9.7"

[package.metadata.cargo-machete]
ignored = ["serde"]

[lints.clippy]
all = { level = "warn", priority = -2 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -2 }

match-bool = "allow"
needless-for-each = "allow"
similar-names = "allow"
too-many-lines = "allow"
